# ec2-test-suite

./: .gitignore  Makefile  README.md  getpara.sh  launch-instances-cluster.sh  launch-instances-nginx.sh  launch-instances-replication.sh  launch-instances-single.sh  search_latest_ami.sh  setup-cluster.sh  setup-replication.sh  submit-benchmark-blank.sh  submit-benchmark-dotnet.sh  submit-benchmark-milvus.sh  submit-benchmark-mongo-timed.sh  submit-benchmark-mongo.sh  submit-benchmark-mysql-hammerdb-ssd.sh  submit-benchmark-mysql-hammerdb.sh  submit-benchmark-mysql-sysbench.sh  submit-benchmark-nginx.sh  submit-benchmark-redis-test_v1.sh  submit-benchmark-redis.sh  submit-benchmark-singles.sh  submit-benchmark-valkey.sh
benchmark/: cassandra-benchmark.sh  dotnet-benchmark.sh  kafka-benchmark.sh  milvus-benchmark-local.sh  milvus-benchmark.sh  mongo-benchmark.sh  mongo-benchmark_v1.sh  mongo-benchmark_v2-timed.sh  mongo-benchmark_v2.sh  mongo-benchmark_v3.sh  mysql-benchmark.sh  mysql-benchmark_sysbench.sh  mysql-benchmark_sysbench_prepare.sh  mysql-benchmark_sysbench_run-jd.sh  mysql-benchmark_sysbench_run.sh  mysql-benchmark_v2.sh  mysql-benchmark_v2_prepare.sh  mysql-benchmark_v2_run.sh  nginx-benchmark.sh  nginx-benchmark_mixed.sh  nginx-benchmark_mixed_v0.1.sh  os-optimization.sh  petclinic-benchmark.sh  petclinic_test_plan.jmx  qdrant-bechmark.sh  qdrant-benchmark.sh  redis-benchmark.sh  redis-benchmark_v1.sh  redis-benchmark_v2-draft.sh  redis-benchmark_v2.sh  resp-benchmark.sh  valkey-benchmark_shein-pg-partition.sh  valkey-benchmark_shein-pods.sh  valkey-benchmark_shein.sh  valkey-benchmark_v1.sh  valkey-benchmark_zhangkai.sh  workload_cassandra  workload_mongo  workload_mongo_mixed  workload_mongo_readheavy  (+5 more)
blowfish-demo/: run.sh
compile/: 01-mongo-4.0.2.sh  02-mysql-5.7.36.sh  03-redis-4.0.9.sh  04-tensorflow-2.4.1.sh  05-cuttlefish-on-g5g.sh  06-aosp14-on-c7g.sh  07-mesos-on-c7g.sh  conscrypt.sh
docker/: Dockerfile  README.md  build-and-push-to-ecr-private.sh  build.sh
dotnet/: install-sut.sh
milvus/: install-sut.sh
misc/: aiml_onnx.optimized_practice.sh  aiml_torch.compile_practice.sh  aperf-and-java.sh  (+12 more)
misc/demo-code-for-graviton-migration/gdd-chatbot-main/: CMakeLists.txt  chatbot.cpp  commands.txt
misc/demo-code-for-graviton-migration/simd_demo/: CMakeLists.txt  Makefile  OPTIMIZATION_ANALYSIS.md  PERFORMANCE_REPORT.md  PROJECT_SUMMARY.md  README.md  build.sh  run_benchmark.sh  visualize_performance.sh
misc/demo-code-for-graviton-migration/simd_demo/include/: simd_demo.h
misc/demo-code-for-graviton-migration/simd_demo/src/: audio_processing.cpp  data_analytics.cpp  image_processing.cpp  main.cpp  matrix_operations.cpp  simd_utils.cpp  vector_math.cpp
(+520 files in other folders)
